provato ad aggiungere un contenitore

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,18 @@
     <title>Toboolist</title>
     <link rel="stylesheet" href="styles/stile.css">
 </head>
+
 <body>
+    <!-- Titolo e Logo -->
     <header>
         <img class="logo" src="img/Logo.png" alt="Logo Toboolist">
         <h1 class="titolo">Toboolist</h1>
     </header>
-    
+    <main>
+        <div class="contenitore"></div>
+    </main>
+
+
 </body>
+
 </html>
