aggiunti due contenitori

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         <h1 class="titolo">Toboolist</h1>
     </header>
     <main>
-        <div class="contenitore"></div>
+        <div class="contenitore">
+            <button class="addtask">>Add Task</button>
+            <button class="newtask">Add Selection</button>
+        </div>
+
+        <div class="contenitore2">
+            <h2>New Task</h2>
+            <div class="checkbox"> <span></span></div>
+        </div>
     </main>
 
 
