fix vari e aggiustamenti

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     </header>
     <main>
         <div class="contenitore">
-            <button class="addtask">>Add Task</button>
-            <button class="newtask">Add Selection</button>
+            <button class="addtask button">Add Task</button>
+            <button class="newtask button">Add Selection</button>
         </div>
-
         <div class="contenitore2">
-            <h2>New Task</h2>
-            <div class="checkbox"> <span></span></div>
+        <section class="sezionelista">
+                <span>&#9660;</span>
+                <h2>New Task</h2> 
+        </section>
         </div>
     </main>
 
