Aggiunta tag, task e titolo lista

--- a/index.html
+++ b/index.html
@@ -21,10 +21,39 @@
             <button class="newtask button">Add Selection</button>
         </div>
         <div class="contenitore2">
-        <section class="sezionelista">
+            <section class="sezionelista">
                 <span>&#9660;</span>
-                <h2>New Task</h2> 
-        </section>
+                <h2>New Task</h2>
+                <div class="task">
+                    <div class="task">
+                        <span class="check">&checkmark;</span>
+                        <span class="writtentask">Quaterly Newstletter</span>
+                        <span class="tags editorial">Editorial</span>
+                    <span></span>
+                </div>
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                    <span></span>
+                </div>
+                <section class="sezionelista">
+                    <span>&#9660;</span>
+                    <h2>New Task</h2>
+                    <div class="task">
+                        <div class="task">
+                            <span class="check">&checkmark;</span>
+                            <span class="writtentask">Quaterly Newstletter</span>
+                            <span class="tags editorial">Editorial</span>
+                        <span></span>
+                    </div>
+                    <div class="task">
+                        <span class="check">&checkmark;</span>
+                        <span class="writtentask">Quaterly Newstletter</span>
+                        <span class="tags editorial">Editorial</span>
+                        <span></span>
+                    </div>
+            </section>
         </div>
     </main>
 
