Aggiunta struttura multipla tasks

--- a/index.html
+++ b/index.html
@@ -29,31 +29,73 @@
                         <span class="check">&checkmark;</span>
                         <span class="writtentask">Quaterly Newstletter</span>
                         <span class="tags editorial">Editorial</span>
-                    <span></span>
                 </div>
                 <div class="task">
                     <span class="check">&checkmark;</span>
                     <span class="writtentask">Quaterly Newstletter</span>
                     <span class="tags editorial">Editorial</span>
-                    <span></span>
                 </div>
-                <section class="sezionelista">
-                    <span>&#9660;</span>
-                    <h2>New Task</h2>
-                    <div class="task">
-                        <div class="task">
-                            <span class="check">&checkmark;</span>
-                            <span class="writtentask">Quaterly Newstletter</span>
-                            <span class="tags editorial">Editorial</span>
-                        <span></span>
-                    </div>
+            </section>
+
+            <section class="sezionelista">
+                <span>&#9660;</span>
+                <h2>New Task</h2>
+                <div class="task">
                     <div class="task">
                         <span class="check">&checkmark;</span>
                         <span class="writtentask">Quaterly Newstletter</span>
                         <span class="tags editorial">Editorial</span>
-                        <span></span>
-                    </div>
+                </div>
+
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
+
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
+                
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
             </section>
+
+            <section class="sezionelista">
+                <span>&#9660;</span>
+                <h2>New Task</h2>
+                <div class="task">
+                    <div class="task">
+                        <span class="check">&checkmark;</span>
+                        <span class="writtentask">Quaterly Newstletter</span>
+                        <span class="tags editorial">Editorial</span>
+                </div>
+
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
+
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
+
+                <div class="task">
+                    <span class="check">&checkmark;</span>
+                    <span class="writtentask">Quaterly Newstletter</span>
+                    <span class="tags editorial">Editorial</span>
+                </div>
+            </section>
+                
+
         </div>
     </main>
 
