added buttons format on css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="contenitore">
             <button class="addtask button">Add Task</button>
-            <button class="newtask button">Add Selection</button>
+            <button class="addsection button">Add Section</button>
         </div>
         <div class="contenitore2">
 
